--- a/WinFormsMVP/WinFormsMVP/WinFormsMVP.csproj
+++ b/WinFormsMVP/WinFormsMVP/WinFormsMVP.csproj
@@ -103,6 +103,7 @@
     <EmbeddedResource Include="View\CustomerForm.resx">
       <DependentUpon>CustomerForm.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="MVPOverviewClassDiagram.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
